updated intro (with all tex conversion stuff)

--- a/tex/dblp.bib
+++ b/tex/dblp.bib
@@ -3116,3 +3116,25 @@
   biburl       = {https://dblp.org/rec/journals/jfp/OConnorCRJAKMSK21.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{conf-ecoop-XhebrajB0R22,
+  author       = {Anxhelo Xhebraj and
+                  Oliver Bracevac and
+                  Guannan Wei and
+                  Tiark Rompf},
+  editor       = {Karim Ali and
+                  Jan Vitek},
+  title        = {What If We Don't Pop the Stack? The Return of 2nd-Class Values},
+  booktitle    = {36th European Conference on Object-Oriented Programming, {ECOOP} 2022,
+                  June 6-10, 2022, Berlin, Germany},
+  series       = {LIPIcs},
+  volume       = {222},
+  pages        = {15:1--15:29},
+  publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year         = {2022},
+  url          = {https://doi.org/10.4230/LIPIcs.ECOOP.2022.15},
+  doi          = {10.4230/LIPICS.ECOOP.2022.15},
+  timestamp    = {Wed, 21 Aug 2024 22:46:00 +0200},
+  biburl       = {https://dblp.org/rec/conf/ecoop/XhebrajB0R22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
