--- a/tex/other.bib
+++ b/tex/other.bib
@@ -771,3 +771,10 @@
   number      = {ICIS-R17001},
   year        = {2017}
 }
+
+@book{klabnik2023rust,
+  title={The Rust programming language},
+  author={Klabnik, Steve and Nichols, Carol},
+  year={2023},
+  publisher={No Starch Press}
+}
