--- a/tex/dblp.bib
+++ b/tex/dblp.bib
@@ -3039,102 +3039,302 @@
 }
 
 @inproceedings{conf-pldi-ReinkingXML21,
-  author       = {Alex Reinking and
-                  Ningning Xie and
-                  Leonardo de Moura and
-                  Daan Leijen},
-  editor       = {Stephen N. Freund and
-                  Eran Yahav},
-  title        = {Perceus: garbage free reference counting with reuse},
-  booktitle    = {{PLDI} '21: 42nd {ACM} {SIGPLAN} International Conference on Programming
-                  Language Design and Implementation, Virtual Event, Canada, June 20-25,
-                  2021},
-  pages        = {96--111},
-  publisher    = {{ACM}},
-  year         = {2021},
-  url          = {https://doi.org/10.1145/3453483.3454032},
-  doi          = {10.1145/3453483.3454032},
-  timestamp    = {Thu, 29 Sep 2022 08:36:57 +0200},
-  biburl       = {https://dblp.org/rec/conf/pldi/ReinkingXML21.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  author    = {Alex Reinking and
+               Ningning Xie and
+               Leonardo de Moura and
+               Daan Leijen},
+  editor    = {Stephen N. Freund and
+               Eran Yahav},
+  title     = {Perceus: garbage free reference counting with reuse},
+  booktitle = {{PLDI} '21: 42nd {ACM} {SIGPLAN} International Conference on Programming
+               Language Design and Implementation, Virtual Event, Canada, June 20-25,
+               2021},
+  pages     = {96--111},
+  publisher = {{ACM}},
+  year      = {2021},
+  url       = {https://doi.org/10.1145/3453483.3454032},
+  doi       = {10.1145/3453483.3454032},
+  timestamp = {Thu, 29 Sep 2022 08:36:57 +0200},
+  biburl    = {https://dblp.org/rec/conf/pldi/ReinkingXML21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{conf-ifip2-Wadler90,
-  author       = {Philip Wadler},
-  editor       = {Manfred Broy and
-                  Cliff B. Jones},
-  title        = {Linear Types can Change the World!},
-  booktitle    = {Programming concepts and methods: Proceedings of the {IFIP} Working
-                  Group 2.2, 2.3 Working Conference on Programming Concepts and Methods,
-                  Sea of Galilee, Israel, 2-5 April, 1990},
-  pages        = {561},
-  publisher    = {North-Holland},
-  year         = {1990},
-  timestamp    = {Sat, 26 Dec 2020 18:17:05 +0100},
-  biburl       = {https://dblp.org/rec/conf/ifip2/Wadler90.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  author    = {Philip Wadler},
+  editor    = {Manfred Broy and
+               Cliff B. Jones},
+  title     = {Linear Types can Change the World!},
+  booktitle = {Programming concepts and methods: Proceedings of the {IFIP} Working
+               Group 2.2, 2.3 Working Conference on Programming Concepts and Methods,
+               Sea of Galilee, Israel, 2-5 April, 1990},
+  pages     = {561},
+  publisher = {North-Holland},
+  year      = {1990},
+  timestamp = {Sat, 26 Dec 2020 18:17:05 +0100},
+  biburl    = {https://dblp.org/rec/conf/ifip2/Wadler90.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{journals-pacmpl-BernardyBNJS18,
-  author       = {Jean{-}Philippe Bernardy and
-                  Mathieu Boespflug and
-                  Ryan R. Newton and
-                  Simon Peyton Jones and
-                  Arnaud Spiwack},
-  title        = {Linear Haskell: practical linearity in a higher-order polymorphic
-                  language},
-  journal      = {Proc. {ACM} Program. Lang.},
-  volume       = {2},
-  number       = {{POPL}},
-  pages        = {5:1--5:29},
-  year         = {2018},
-  url          = {https://doi.org/10.1145/3158093},
-  doi          = {10.1145/3158093},
-  timestamp    = {Wed, 17 Feb 2021 08:54:09 +0100},
-  biburl       = {https://dblp.org/rec/journals/pacmpl/BernardyBNJS18.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  author    = {Jean{-}Philippe Bernardy and
+               Mathieu Boespflug and
+               Ryan R. Newton and
+               Simon Peyton Jones and
+               Arnaud Spiwack},
+  title     = {Linear Haskell: practical linearity in a higher-order polymorphic
+               language},
+  journal   = {Proc. {ACM} Program. Lang.},
+  volume    = {2},
+  number    = {{POPL}},
+  pages     = {5:1--5:29},
+  year      = {2018},
+  url       = {https://doi.org/10.1145/3158093},
+  doi       = {10.1145/3158093},
+  timestamp = {Wed, 17 Feb 2021 08:54:09 +0100},
+  biburl    = {https://dblp.org/rec/journals/pacmpl/BernardyBNJS18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{journals-jfp-OConnorCRJAKMSK21,
-  author       = {Liam O'Connor and
-                  Zilin Chen and
-                  Christine Rizkallah and
-                  Vincent Jackson and
-                  Sidney Amani and
-                  Gerwin Klein and
-                  Toby Murray and
-                  Thomas Sewell and
-                  Gabriele Keller},
-  title        = {Cogent: uniqueness types and certifying compilation},
-  journal      = {J. Funct. Program.},
-  volume       = {31},
-  pages        = {e25},
-  year         = {2021},
-  url          = {https://doi.org/10.1017/S095679682100023X},
-  doi          = {10.1017/S095679682100023X},
-  timestamp    = {Tue, 07 May 2024 20:27:40 +0200},
-  biburl       = {https://dblp.org/rec/journals/jfp/OConnorCRJAKMSK21.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  author    = {Liam O'Connor and
+               Zilin Chen and
+               Christine Rizkallah and
+               Vincent Jackson and
+               Sidney Amani and
+               Gerwin Klein and
+               Toby Murray and
+               Thomas Sewell and
+               Gabriele Keller},
+  title     = {Cogent: uniqueness types and certifying compilation},
+  journal   = {J. Funct. Program.},
+  volume    = {31},
+  pages     = {e25},
+  year      = {2021},
+  url       = {https://doi.org/10.1017/S095679682100023X},
+  doi       = {10.1017/S095679682100023X},
+  timestamp = {Tue, 07 May 2024 20:27:40 +0200},
+  biburl    = {https://dblp.org/rec/journals/jfp/OConnorCRJAKMSK21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{conf-ecoop-XhebrajB0R22,
-  author       = {Anxhelo Xhebraj and
-                  Oliver Bracevac and
-                  Guannan Wei and
-                  Tiark Rompf},
-  editor       = {Karim Ali and
-                  Jan Vitek},
-  title        = {What If We Don't Pop the Stack? The Return of 2nd-Class Values},
-  booktitle    = {36th European Conference on Object-Oriented Programming, {ECOOP} 2022,
-                  June 6-10, 2022, Berlin, Germany},
-  series       = {LIPIcs},
-  volume       = {222},
-  pages        = {15:1--15:29},
-  publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
-  year         = {2022},
-  url          = {https://doi.org/10.4230/LIPIcs.ECOOP.2022.15},
-  doi          = {10.4230/LIPICS.ECOOP.2022.15},
-  timestamp    = {Wed, 21 Aug 2024 22:46:00 +0200},
-  biburl       = {https://dblp.org/rec/conf/ecoop/XhebrajB0R22.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  author    = {Anxhelo Xhebraj and
+               Oliver Bracevac and
+               Guannan Wei and
+               Tiark Rompf},
+  editor    = {Karim Ali and
+               Jan Vitek},
+  title     = {What If We Don't Pop the Stack? The Return of 2nd-Class Values},
+  booktitle = {36th European Conference on Object-Oriented Programming, {ECOOP} 2022,
+               June 6-10, 2022, Berlin, Germany},
+  series    = {LIPIcs},
+  volume    = {222},
+  pages     = {15:1--15:29},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year      = {2022},
+  url       = {https://doi.org/10.4230/LIPIcs.ECOOP.2022.15},
+  doi       = {10.4230/LIPICS.ECOOP.2022.15},
+  timestamp = {Wed, 21 Aug 2024 22:46:00 +0200},
+  biburl    = {https://dblp.org/rec/conf/ecoop/XhebrajB0R22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{journals-pacmpl-LorenzenLS23,
+  author    = {Anton Lorenzen and
+               Daan Leijen and
+               Wouter Swierstra},
+  title     = {FP{$^2$}: Fully in-Place Functional Programming},
+  journal   = {Proc. {ACM} Program. Lang.},
+  volume    = {7},
+  number    = {{ICFP}},
+  pages     = {275--304},
+  year      = {2023},
+  url       = {https://doi.org/10.1145/3607840},
+  doi       = {10.1145/3607840},
+  timestamp = {Sun, 19 Jan 2025 14:47:44 +0100},
+  biburl    = {https://dblp.org/rec/journals/pacmpl/LorenzenLS23.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{conf-esop-AspinallH02,
+  author    = {David Aspinall and
+               Martin Hofmann},
+  editor    = {Daniel Le M{\'{e}}tayer},
+  title     = {Another Type System for In-Place Update},
+  booktitle = {Programming Languages and Systems, 11th European Symposium on Programming,
+               {ESOP} 2002, held as Part of the Joint European Conference on Theory
+               and Practice of Software, {ETAPS} 2002, Grenoble, France, April 8-12,
+               2002, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {2305},
+  pages     = {36--52},
+  publisher = {Springer},
+  year      = {2002},
+  url       = {https://doi.org/10.1007/3-540-45927-8\_4},
+  doi       = {10.1007/3-540-45927-8\_4},
+  timestamp = {Tue, 14 May 2019 10:00:41 +0200},
+  biburl    = {https://dblp.org/rec/conf/esop/AspinallH02.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{journals-jfp-AspinallHK08,
+  author    = {David Aspinall and
+               Martin Hofmann and
+               Michal Konecn{\'{y}}},
+  title     = {A type system with usage aspects},
+  journal   = {J. Funct. Program.},
+  volume    = {18},
+  number    = {2},
+  pages     = {141--178},
+  year      = {2008},
+  url       = {https://doi.org/10.1017/S0956796807006399},
+  doi       = {10.1017/S0956796807006399},
+  timestamp = {Tue, 06 Jun 2017 22:25:48 +0200},
+  biburl    = {https://dblp.org/rec/journals/jfp/AspinallHK08.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{journals-pacmpl-LorenzenL22,
+  author    = {Anton Lorenzen and
+               Daan Leijen},
+  title     = {Reference counting with frame limited reuse},
+  journal   = {Proc. {ACM} Program. Lang.},
+  volume    = {6},
+  number    = {{ICFP}},
+  pages     = {357--380},
+  year      = {2022},
+  url       = {https://doi.org/10.1145/3547634},
+  doi       = {10.1145/3547634},
+  timestamp = {Mon, 28 Aug 2023 21:30:20 +0200},
+  biburl    = {https://dblp.org/rec/journals/pacmpl/LorenzenL22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{journals-pacmpl-LorenzenLSL24,
+  author    = {Anton Lorenzen and
+               Daan Leijen and
+               Wouter Swierstra and
+               Sam Lindley},
+  title     = {The Functional Essence of Imperative Binary Search Trees},
+  journal   = {Proc. {ACM} Program. Lang.},
+  volume    = {8},
+  number    = {{PLDI}},
+  pages     = {518--542},
+  year      = {2024},
+  url       = {https://doi.org/10.1145/3656398},
+  doi       = {10.1145/3656398},
+  timestamp = {Fri, 02 Aug 2024 21:41:17 +0200},
+  biburl    = {https://dblp.org/rec/journals/pacmpl/LorenzenLSL24.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{journals-csur-DunfieldK21,
+  author    = {Jana Dunfield and
+               Neel Krishnaswami},
+  title     = {Bidirectional Typing},
+  journal   = {{ACM} Comput. Surv.},
+  volume    = {54},
+  number    = {5},
+  pages     = {98:1--98:38},
+  year      = {2022},
+  url       = {https://doi.org/10.1145/3450952},
+  doi       = {10.1145/3450952},
+  timestamp = {Wed, 23 Nov 2022 16:16:45 +0100},
+  biburl    = {https://dblp.org/rec/journals/csur/DunfieldK21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{journals-pacmpl-AbelB20,
+  author    = {Andreas Abel and
+               Jean{-}Philippe Bernardy},
+  title     = {A unified view of modalities in type systems},
+  journal   = {Proc. {ACM} Program. Lang.},
+  volume    = {4},
+  number    = {{ICFP}},
+  pages     = {90:1--90:28},
+  year      = {2020},
+  url       = {https://doi.org/10.1145/3408972},
+  doi       = {10.1145/3408972},
+  timestamp = {Wed, 17 Feb 2021 08:54:09 +0100},
+  biburl    = {https://dblp.org/rec/journals/pacmpl/AbelB20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{journals-pacmpl-SpiwackKBWE22,
+  author    = {Arnaud Spiwack and
+               Csongor Kiss and
+               Jean{-}Philippe Bernardy and
+               Nicolas Wu and
+               Richard A. Eisenberg},
+  title     = {Linearly qualified types: generic inference for capabilities and uniqueness},
+  journal   = {Proc. {ACM} Program. Lang.},
+  volume    = {6},
+  number    = {{ICFP}},
+  pages     = {137--164},
+  year      = {2022},
+  url       = {https://doi.org/10.1145/3547626},
+  doi       = {10.1145/3547626},
+  timestamp = {Mon, 28 Aug 2023 21:30:20 +0200},
+  biburl    = {https://dblp.org/rec/journals/pacmpl/SpiwackKBWE22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{conf-plilp-BarendsenS95,
+  author    = {Erik Barendsen and
+               Sjaak Smetsers},
+  editor    = {Manuel V. Hermenegildo and
+               S. Doaitse Swierstra},
+  title     = {Uniqueness Type Inference},
+  booktitle = {Programming Languages: Implementations, Logics and Programs, 7th International
+               Symposium, PLILP'95, Utrecht, The Netherlands, September 20-22, 1995,
+               Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {982},
+  pages     = {189--206},
+  publisher = {Springer},
+  year      = {1995},
+  url       = {https://doi.org/10.1007/BFb0026821},
+  doi       = {10.1007/BFB0026821},
+  timestamp = {Tue, 14 May 2019 10:00:35 +0200},
+  biburl    = {https://dblp.org/rec/conf/plilp/BarendsenS95.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{journals-mscs-BarendsenS96,
+  author    = {Erik Barendsen and
+               Sjaak Smetsers},
+  title     = {Uniqueness Typing for Functional Languages with Graph Rewriting Semantics},
+  journal   = {Math. Struct. Comput. Sci.},
+  volume    = {6},
+  number    = {6},
+  pages     = {579--612},
+  year      = {1996},
+  url       = {https://doi.org/10.1017/s0960129500070109},
+  doi       = {10.1017/S0960129500070109},
+  timestamp = {Sun, 19 Jan 2025 14:39:38 +0100},
+  biburl    = {https://dblp.org/rec/journals/mscs/BarendsenS96.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{conf-ifl-VriesPA07,
+  author    = {Edsko de Vries and
+               Rinus Plasmeijer and
+               David M. Abrahamson},
+  editor    = {Olaf Chitil and
+               Zolt{\'{a}}n Horv{\'{a}}th and
+               Vikt{\'{o}}ria Zs{\'{o}}k},
+  title     = {Uniqueness Typing Simplified},
+  booktitle = {Implementation and Application of Functional Languages, 19th International
+               Workshop, {IFL} 2007, Freiburg, Germany, September 27-29, 2007. Revised
+               Selected Papers},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5083},
+  pages     = {201--218},
+  publisher = {Springer},
+  year      = {2007},
+  url       = {https://doi.org/10.1007/978-3-540-85373-2\_12},
+  doi       = {10.1007/978-3-540-85373-2\_12},
+  timestamp = {Mon, 03 Jan 2022 22:26:05 +0100},
+  biburl    = {https://dblp.org/rec/conf/ifl/VriesPA07.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
