--- a/tex/other.bib
+++ b/tex/other.bib
@@ -773,8 +773,17 @@
 }
 
 @book{klabnik2023rust,
-  title={The Rust programming language},
-  author={Klabnik, Steve and Nichols, Carol},
-  year={2023},
-  publisher={No Starch Press}
+  title     = {The Rust programming language},
+  author    = {Klabnik, Steve and Nichols, Carol},
+  year      = {2023},
+  publisher = {No Starch Press}
+}
+
+@inproceedings{brus1987clean,
+  title        = {Clean—a language for functional graph rewriting},
+  author       = {Brus, Tom H and van Eekelen, Marko CJD and Van Leer, MO and Plasmeijer, Marinus J},
+  booktitle    = {Conference on Functional Programming Languages and Computer Architecture},
+  pages        = {364--384},
+  year         = {1987},
+  organization = {Springer}
 }
